# yuzu-companion

./: .dockerignore  .env.example  .gitignore  2026-06-28-refactor-plan.md  2026-06-28-snake-feet-audit.md  2026-06-29-test-modernization-plan.md  2026-06-30-native-fc-audit.md  2026-06-30-native-fc-plan.md  2026-06-30-native-fc-review.md  2026-06-30-native-fc-verification.md  AGENTIC_AUDIT.md  AGENTIC_ROADMAP.md  AGENTS.md  ARCHITECTURE_GUIDE.md  AUDIT_REPORT.md  BACKEND_OVERHAUL_ROADMAP.md  CHANGELOG.md  CHAT_REBUILD.md  CHAT_RESET_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_REVIEW_FIXES.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_AUDIT.md  FRONTEND_MODERNIZATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.MD  INSTALL.md  LICENSE  MEMORY_ALIGNMENT_V2_ROADMAP.md  MEMORY_SYSTEM_ROADMAP.md  MIGRATION_ROADMAP.md  PERFORMANCE.md  PHASE_1-4_IMPROVEMENTS.md  PHASE_3_POLISH_AUDIT.md  PHASE_9_10_TESTING.md  PROJECT_AUDIT_REPORT.md  PROVIDER_REFACTOR_PLAN.md  (+47 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  pull_request_template.md
app/: README.md  __init__.py  a.py  agentic_config.py  app.py  commands.py  database.py  db_pg.py  db_pg_models.py  db_pg_models_async.py  db_queries.py  encryption.py  key_manager.py  legacy_markup.py  llm_client.py  logging_config.py  orchestrator.py  orchestrator_agentic.py  profile_analysis.py  prompt.md  prompts.py  providers.py  session_lifecycle.py  stream_manager.py  visual_context.py
cli/: README.md  app.py  client.py
docs/: ARCHITECTURE.md  ASYNC_MIGRATION_ROADMAP.md  BACKEND.md  INSTALL.md  (+17 more)
(+411 files in other folders)
