[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuzu-companion"
version = "4.0.0"
description = "AI companion system with memory, multimodal, and multi-provider support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "icedeyes12", email = "banibaskara@gmail.com"}
]
dependencies = [
    "psycopg[binary,pool]>=3.1",
    "pycryptodome>=3.20.0",
    "python-dotenv>=1.0.0",
    "fsrs>=6.3.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "Jinja2>=3.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.47.0",
    "requests>=2.33.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
]

[project.scripts]
yuzu = "cli.app:run_app"
yuzu-server = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*"]
exclude = ["tests*", "scripts*"]
